--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "bcryptjs": "^3.0.2",
+    "firebase-admin": "^13.4.0",
+    "googleapis": "^154.0.0",
     "motion": "^12.19.1",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
