--- a/package.json
+++ b/package.json
@@ -3,30 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@headlessui/react": "^2.2.9",
     "bcryptjs": "^3.0.2",
-    "firebase-admin": "^13.4.0",
-    "googleapis": "^154.0.0",
+    "firebase-admin": "^13.5.0",
+    "googleapis": "^164.1.0",
     "jose": "^6.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "motion": "^12.19.1",
+    "motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.58.1",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "tailwindcss": "^4",
