--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --experimental-https",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -28,6 +28,7 @@
     "@types/node": "^24",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
