Addedd projects page

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,14 @@
 .DS_Store
 *.pem
 
+# certificates
+/certificates
+*.key
+*.crt
+*.cert
+*.p12
+*.pfx
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -33,9 +41,56 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# local environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE / Editor
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+.project
+.settings
+.classpath
+
+# OS files
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# Log files
+*.log
+logs
+*.log.*
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+.parcel-cache
+
+# Firebase / Google Cloud
+.firebase
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+*.cache
+
+# Test coverage
+/coverage
+.nyc_output
