feat: comprehensive portfolio enhancements
- Authentication improvements:
  * Admin login redirect system (preserves intended URL)
  * Fixed password usage counter bug
  * IP spoofing protection with secure IP extraction
  * Enhanced login UI with CloudBurst Lab branding

- New protected pages:
  * Friends Corner (password-protected)
  * Love Corner (password-protected)
  * Personal Life (password-protected)
  * Reusable RestrictedPageLogin component

- Security hardening:
  * IP validation utilities (getClientIP.ts)
  * Anti-spoofing protection in middleware
  * Private IP range filtering
  * Rate limiting with strict/loose attempt tracking

- UI/UX improvements:
  * Compact responsive login design
  * Admin navbar hidden on login page
  * Gallery navigation section on about page
  * Improved gallery grid spacing and sizing

- SEO & Documentation:
  * Added protected pages to sitemap
  * Updated README routes section
  * Dynamic CloudBurst Lab logo API endpoint

- Code cleanup:
  * Removed console.log statements
  * Fixed storage path in deleteImage
  * Added Vercel Analytics
  * Removed CORS configuration (handled via headers)
  * Global error page implementation

- Dependencies:
  * Added @vercel/analytics

All features production-ready with successful build verification.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "firebase-admin": "^13.5.0",
     "googleapis": "^164.1.0",
